Todo bien hasta enviar reto